...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NiC-rj-IhF" userLabel="LoginButton">
                                <rect key="frame" x="198" y="331" width="204" height="30"/>
                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="204" id="G6l-J8-q9z"/>
                                </constraints>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="onLoginPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DTN-tl-3mY"/>
                                </connections>
                            </button>
...
                                    <outlet property="delegate" destination="Jwl-6d-z6e" id="Bob-BG-TkW"/>
                                </connections>
                            </mapView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Map" id="N5d-0D-ltX"/>
                    <navigationItem key="navigationItem" id="xMu-gT-1UW"/>
                    <connections>
                        <outlet property="mapView" destination="UuF-gS-zRm" id="LPb-qL-ZE1"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="KAJ-Gl-lzE" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
            <point key="canvasLocation" x="-17" y="287"/>
        </scene>
        <!--List-->
        <scene sceneID="Htn-NQ-Pmj">
            <objects>
                <navigationController storyboardIdentifier="PinViewController" id="xpk-P2-5i1" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="List" id="xd3-PN-BFN"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="PMb-OK-BMQ">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="uEV-2z-UHM" kind="relationship" relationship="rootViewController" id="JTS-fe-B8u"/>
...
